--- a/app/views/avaliacaos/edit.html.erb
+++ b/app/views/avaliacaos/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="page header"> 
-  <h1>Editar Promoção</h1>
+  <h1>Editar Avaliação</h1>
 </div>
 
 <%= render :partial => 'form' %>
 
-<%= link_to 'Visualizar', @produto,
+<%= link_to 'Visualizar', @avaliacao,
      :class => 'btn btn-info' %>  
-<%= link_to 'Voltar', produtos_path,
+<%= link_to 'Voltar', avaliacaos_path,
      :class => 'btn btn-default'  %>
