--- a/app/views/produtos/_form.html.erb
+++ b/app/views/produtos/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
   <% end %>
   <div class="control-group">
-    <%= f.label :Buscar_Imagem, :class => 'control-label' %><br>
+    <%= f.label :Cover_ou_Imagem, :class => 'control-label' %><br>
     <div class="controls">
     <%= f.file_field :cover, :class => 'form-control' %>
   </div>
