--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Meu blog</a>
+        <a class="navbar-brand" href="#">RyBull</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-left">
-          <li class="active"><a href="#">Home</a></li>
           <li><%= link_to 'Usuários', usuarios_path %></li>
-          <li><%= link_to 'Posts', posts_path %></li>
-          <li><%= link_to 'Comentários', comentarios_path %></li>
           <li><%= link_to 'Promoções', produtos_path %></li>
+          <li><%= link_to 'Sugestões', sugestaos_path %></li>
+          <li><%= link_to 'Avaliações', avaliacaos_path %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Sair", destroy_usuario_session_path, method: :delete %></li>
