--- a/app/views/produtos/show.html.erb
+++ b/app/views/produtos/show.html.erb
@@ -20,5 +20,7 @@
 
 </p>
 
-<%= link_to 'Editar', edit_produto_path(@produto) %> |
-<%= link_to 'Voltar', produtos_path %>
+<%= link_to 'Editar', edit_produto_path(@produto),
+     :class => 'btn btn-warning' %>  
+<%= link_to 'Voltar', produtos_path,
+     :class => 'btn btn-default'  %>
