--- a/app/views/sugestaos/edit.html.erb
+++ b/app/views/sugestaos/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="page header"> 
-  <h1>Editar Promoção</h1>
+  <h1>Editar Sugestões</h1>
 </div>
 
 <%= render :partial => 'form' %>
 
-<%= link_to 'Visualizar', @produto,
+<%= link_to 'Visualizar', @sugestao,
      :class => 'btn btn-info' %>  
-<%= link_to 'Voltar', produtos_path,
+<%= link_to 'Voltar', sugestaos_path,
      :class => 'btn btn-default'  %>
