--- a/app/views/sugestaos/new.html.erb
+++ b/app/views/sugestaos/new.html.erb
@@ -1,7 +1,6 @@
 <div class="page-header">
-<h1>Nova Promoção</h1>
-<%= link_to 'Voltar', produtos_path,
+<h1>Nova Sugestão</h1>
+<%= link_to 'Voltar', sugestaos_path,
      :class => 'btn btn-default'  %>
+</div>
 <%= render 'form' %>
-
-
